<!--  Non-breaking space  -->
<!DOCTYPE resources [<!ENTITY nbsp "&#160;">]>
<resources>
    <!--  General  -->
    <string name="app_name">Polls</string>
    <string name="polls">Polls</string>

    <!--  Placeholder  -->
    <string name="lipsum_sentence">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a metus pulvinar, suscipit ex ut, vulputate erat.</string>
    <string name="lipsum_phrase">Lorem Ipsum</string>
    <string name="lipsum_email">lorem@ipsum.dolor</string>

    <!--  Poll Detail  -->
    <string name="vote">Vote</string>
    <string name="results">Results</string>

    <!--  Drawer  -->
    <string name="profile_picture_description">profile picture</string>

    <!--  Form General  -->
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="required_hint">*required</string>

    <!-- New Group  -->
    <string name="group_name">Group Name</string>
    <string name="new_group">New Group</string>
    <string name="group_description">Description</string>
    <string name="group_creation_error">Could not create group. Try again later.</string>
    <string name="poll_creation_error">Could not create poll. Try again later.</string>

    <!--  New Poll -->
    <string name="new_poll">New Poll</string>
    <string name="poll_choice_hint">Choice %d</string>
    <string name="poll_question_hint">Poll Question*</string>
    <string name="poll_group">Group</string>

    <!--  Join Group  -->
    <string name="join_group">Join Group</string>
    <string name="join_with_group_id">Join with group ID</string>
    <string name="join_with_qr_code">Join with QR code</string>
    <string name="group_id_label">Group ID (case sensitive)</string>
    <string name="qr_code_content_description">QR Code of group ID</string>

    <!--  Share Group  -->
    <string name="share_group">Share</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>

    <!--  Group Detail -->
    <string name="no_description">No description set.</string>
    <string name="no_group">No group selected.</string>
    <string name="no_group_hint">Select a group from the drawer on the left.</string>

    <!-- Poll Card -->
    <string name="poll_meta_text"><![CDATA[Posted by <b>%s</b> • %d&nbsp;response(s)]]></string>
    <string name="lorem_meta"><![CDATA[Posted by <b>Lorem Ipsum</b> • 42&nbsp;responses]]></string>
    <string name="poll_detail_error">Could not load poll details.</string>
    <string name="logout">Logout</string>
</resources>
