<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingBottom="@dimen/vertical_margin">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_picture_description"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/lipsum_phrase"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/primaryTextColor" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lipsum_email"
        android:textColor="@color/primaryTextColor" />

</LinearLayout>
