<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.share.ShareFragment">

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="@dimen/qr_code_size"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/qr_code_content_description"
        app:layout_constraintBottom_toTopOf="@+id/group_id_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/lipsum" />

    <TextView
        android:id="@+id/group_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_id_label"
        app:layout_constraintBottom_toTopOf="@+id/group_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_code"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/group_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lipsum_phrase"
        android:textIsSelectable="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/copy_group_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_id_label"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/copy_group_id"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_to_clipboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_id"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>