<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/horizontal_padding"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    android:paddingEnd="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingBottom="@dimen/vertical_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/group_id_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/group_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_id_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/join_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/join_with_group_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_id_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/join_with_qr_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/join_with_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_button" />

</androidx.constraintlayout.widget.ConstraintLayout>