<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:text="@string/no_group"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/share_button"
        app:layout_constraintEnd_toStartOf="@+id/share_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/group_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:text="@string/no_group_hint"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:text="@string/share_group"
        android:visibility="invisible"
        app:icon="@drawable/ic_share_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/poll_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/group_description"
        tools:itemCount="30"
        tools:listitem="@layout/poll_card" />
</androidx.constraintlayout.widget.ConstraintLayout>
